--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -27,29 +27,29 @@
         <div class="card-footer">
           <div class="btn-group d-flex">
             <button class="btn btn-primary w-100">Like</button>
-            <button class="btn btn-success w-100">Message</button>
+            <button class="btn btn-success w-100" (click)="selectTab(3)">Message</button>
           </div>
         </div>
       </div>
     </div>
     <div class="col-sm-8">
       <div class="tab-panel">
-        <tabset class="member-tabset">
-          <tab heading="About {{user.knownAs}}">
+        <tabset class="member-tabset" #memberTabs>
+          <tab heading="About {{user.knownAs}}"> <!-- tabId: 0 -->
             <h4>Description</h4>
             <p>{{user.introduction}}</p>
             <h4>Looking For</h4>
             <p>{{user.lookingFor}}</p>
           </tab>
-          <tab heading="Interests">
+          <tab heading="Interests"> <!-- tabId: 1 -->
             <h4>Interests</h4>
             <p>{{user.interests}}</p>
           </tab>
-          <tab heading="Photos">
+          <tab heading="Photos"> <!-- tabId: 2 -->
             <ngx-gallery style="display: inline-block; margin-bottom: 20px" [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
-          <tab heading="Messages">
-            <p>Messages will go here</p>
+          <tab heading="Messages"> <!-- tabId: 3 -->
+            <app-member-messages [recipientId]="user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
