--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -24,7 +24,7 @@
         <img src="{{photoUrl || '../../assets/user.png'}}" alt="" />
       </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
-        Welcome {{uniqueName | titlecase}}
+        Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
 
       <div class="dropdown-menu mt-3" *dropdownMenu>
